# Grigoriadis_Hachiyan

./: CMakeLists.txt  README.md  gen_random_value.cpp  gen_random_value.h  generate_graph.cpp  generate_graph.h  get_norm.cpp  get_norm.h  gk1_algorithm.cpp  gk1_algorithm.h  gk2_algorithm.cpp  gk2_algorithm.h  main.cpp  map_heap.cpp  map_heap.h  mcmc.cpp  mcmc.h
